logs/dag_id=user_processing/run_id=scheduled__2024-07-04T00:00:00+00:00/task_id=store_user/attempt=2.log
[2024-07-05T09:54:04.616+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user scheduled__2024-07-04T00:00:00+00:00 [queued]>
[2024-07-05T09:54:04.625+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user scheduled__2024-07-04T00:00:00+00:00 [queued]>
[2024-07-05T09:54:04.625+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2024-07-05T09:54:04.626+0000] {taskinstance.py:1363} INFO - Starting attempt 2 of 2
[2024-07-05T09:54:04.626+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2024-07-05T09:54:04.635+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): store_user> on 2024-07-04 00:00:00+00:00
[2024-07-05T09:54:04.640+0000] {standard_task_runner.py:55} INFO - Started process 83781 to run task
[2024-07-05T09:54:04.644+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'scheduled__2024-07-04T00:00:00+00:00', '--job-id', '73', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmp6ol9b6vw']
[2024-07-05T09:54:04.646+0000] {standard_task_runner.py:83} INFO - Job 73: Subtask store_user
[2024-07-05T09:54:04.721+0000] {task_command.py:376} INFO - Running <TaskInstance: user_processing.store_user scheduled__2024-07-04T00:00:00+00:00 [running]> on host 409ff340d891
[2024-07-05T09:54:04.776+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2024-07-04T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2024-07-04T00:00:00+00:00
[2024-07-05T09:54:04.778+0000] {postgres.py:129} INFO - Running copy expert: COPY users FROM stdin WITH DELIMITER ",", filename: /tmp/processed_user.csv
[2024-07-05T09:54:04.785+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2024-07-05T09:54:04.789+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 29, in _store_user
    filename='/tmp/processed_user.csv')
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 137, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "",""
LINE 1: COPY users FROM stdin WITH DELIMITER ","
                                             ^

[2024-07-05T09:54:04.796+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20240704T000000, start_date=20240705T095404, end_date=20240705T095404
[2024-07-05T09:54:04.804+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 73 for task store_user (syntax error at or near "",""
LINE 1: COPY users FROM stdin WITH DELIMITER ","
                                             ^
; 83781)
[2024-07-05T09:54:04.817+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2024-07-05T09:54:04.832+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
